# StudyBot

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
apps/discord-bot/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
apps/discord-bot/studybot/cogs/: achievement.py  admin.py  ai_doc.py  battle.py  buddy.py  challenge.py  dashboard.py  expedition.py  flashcard.py  focus.py  forge.py  gamification.py  help.py  insights.py  leaderboard.py  learning_path.py  market.py  phone_nudge.py  pomodoro.py  quest.py  raid.py  sanctuary.py  scheduled_actions.py  shop.py  social_notify.py  study_log.py  study_plan.py  study_room.py  team.py  todo.py  voice_study.py  wellness.py
apps/discord-bot/studybot/config/: __init__.py  constants.py  settings.py
apps/discord-bot/studybot/database/: manager.py
apps/discord-bot/tests/: conftest.py  test_achievement.py  test_activity.py  test_admin.py  test_ai_doc.py  test_battle.py  test_buddy.py  test_challenge.py  test_expedition.py  test_flashcard.py  test_focus.py  test_forge.py  test_gamification.py  test_help.py  test_insights.py  test_learning_path.py  test_lock_settings.py  test_market.py  test_nudge.py  test_plan.py  test_pomodoro.py  test_quest.py  test_raid.py  test_sanctuary.py  test_scheduled_actions.py  test_session_sync.py  test_shop.py  test_social_notify.py  test_study_log.py  test_study_room.py  test_team.py  test_todo.py  test_voice_study.py  test_wellness.py
(+276 files in other folders)
